24 September 2025: Yorgos
	- Avoid calling mesh_detect_cycle_found() when there is no mesh state
	  to begin with.

23 September 2025: Yorgos
	- Merge #1352 from Petr Vaganov: pythonmod: fix HANDLE_LEAK on
	  pythonmod_init.
	- For #1352, align with the current Python<3 code.
	- Merge #1350 from Maryse47: unbound.service.in: allow CAP_NET_ADMIN.
	- For #1350, same CAP_NET_ADMIN change for unbound_portable.service.in
	  as well.

19 September 2025: Wouter
	- Fix to remove configure~ from release tarballs.

19 September 2025: Yorgos
	- Update README.man with clearer text.
	- Merge #1337: 0 TTL cached replies and some TTL behavior changes.
	- TTL change: Cached records that reach TTL 0 are expired.
	- TTL change: TTL 0 upstream answers are no longer cached by
	   cachedb, as they should.
	- TTL change: 'serve-expired-reply-ttl' is now capped by the original
	  TTL value of the record to try and make some sense when replying
	  with expired records.
	- TTL change: TTL decoding was updated to adhere to RFC8767 section 4
	  where a 'set high-order bit' means the value is positive instead of
	  0.
	- unbound.conf manpage: explicitly mention RFC6891.

18 September 2025: Wouter
	- Tag for 1.24.0 release. Includes the fixes below after rc1.
	  The repository continues with version 1.24.1.

17 September 2025: Yorgos
	- Too many quotes for the EDE message debug printout.

15 September 2025: Yorgos
	- Small debug output improvement when attaching an EDE.

15 September 2025: Wouter
	- Fix to print warning for when so-sndbuf setsockopt is not granted.

11 September 2025: Wouter
	- version set to 1.24.0 for release.
	- tag for 1.24.0rc1.
	- Update contrib/aaaa-filter-iterator.patch so it applies on 1.24.0.

9 September 2025: Wouter
	- Fix #1332: CNAME chains are sometimes not followed when RPZs add a
	  local CNAME rewrite.

8 September 2025: Yorgos
	- Update documentation for using "SET ... EX" in Redis.
	- Document max buffer sizes for Redis commands.
	- Update man pages.
